switch currenttime hook from audioprocess back to timeupdate. add touch-action:none to css on .track to see how that interacts on mobile for this dragToSeek issue.

--- a/src/style.css
+++ b/src/style.css
@@ -86,6 +86,7 @@
 .track {
     margin: 0;
     margin: 0 0 40px 0;
+    touch-action: none;
 }
 
 .track-title {
